cabal-version:      3.0
name:               tetris
version:            0.1.0.0
synopsis:           A cute Tetris game in Haskell
build-type:         Simple

executable tetris
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base       >= 4.17 && < 5,
        gloss      >= 1.13,
        random     >= 1.2
    ghc-options: -O2 -threaded
